Fix: align first section div at flex-start:

--- a/homepage.css
+++ b/homepage.css
@@ -64,7 +64,7 @@ h1 {
 .first-section {
     height: 50vh;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: column;
 }
